fixing styles on safari

--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,6 @@
 
 .switch-wrapper > div {
   position: absolute;
+  margin-bottom: 60px;
   width: 100%;
 }
